# metacall-parser

./: .gitignore  CMakeLists.txt  README.md
cli/: main.c
include/: mcp_parser.h  metacall_parser.h
scripts/: fetch-deps.sh
src/: api.c  dependency_builder.c  parser.c
src/extractors/: js_extractor.c  python_extractor.c  ruby_extractor.c
tests/: run_tests.sh  sample.js  sample.py  sample.rb  utils.js  utils.py  utils.rb
